# padaria

./: app.py  pyproject.toml  requirements.txt
templates/: base.html
