[tool.poetry]
name = "projeto-padaria (3)"
version = "0.1.0"
description = ""
authors = ["Sidnei Pacheco <lnksilva26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-simplelogin = "^0.1.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
